--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,7 +1,7 @@
 <div class=row>
   <h1>Listing invoices</h1>
     <div class="pull-right range-query">
-      <%=form_tag invoices_path method: :get do %>
+      <%=form_tag invoices_path, method: :get do %>
       <%=text_field_tag 'search[date_from]', @search.date_from %>
       <%=text_field_tag 'search[date_to]', @search.date_to %>
       <%=submit_tag 'Search', class: 'btn search-button' %>
