--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,23 @@
       <li><%= link_to "About Us", welcome_about_path %></li>
       <li><%= link_to "Features", welcome_features_path %></li>
       <li><%= link_to "Pricing", welcome_pricing_path %></li>
-      <li><%= link_to "Invoices", invoices_path %></li>
       <li><%= link_to "FAQs", welcome_faq_path %></li>
       <li><%= link_to "Blogs", welcome_blogs_path %></li>
       <li><%= link_to "Contact Us", welcome_contact_path %></li>
       
       <% if current_user %>
       <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      <div class='btn-group pull-right right-nav'>
+        <button type="button" class="btn btn-lg dropdown-toggle" data-toggle="dropdown">
+          <span class="caret"></span>
+          <span class="sr-only">Admin</span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li><%= link_to "Invoices", invoices_path %></li>
+          <li><%= link_to "Companies", companies_path %></li>
+          <li><%= link_to "Employees", employees_path %></li>
+        </ul>
+      </div>
       <% else %>
          <li><%= link_to "Sign In", new_user_session_path %></li>
          <li><%= link_to "Sign Up", new_user_registration_path %></li>
