--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,18 +1,18 @@
 <div class="row">
-    <%= form_for(@invoice) do |f| %>
-      <% if @invoice.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
-
-          <ul>
-          <% @invoice.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-          </ul>
-        </div>
-      <% end %>
-
-      <div class="control-group">
+  <%= form_for @invoice, html: { class: 'form-horizontal' } do |f| %>
+    <% if @invoice.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
+  
+        <ul>
+        <% @invoice.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+  
+    <div class="control-group">
       <%= f.label :date, class: 'control-label' %><br>
       <div class="controls">
         <%= f.date_select :date %>
@@ -31,15 +31,15 @@
       </div>
     </div>
     <div class="control-group">
-      <%= f.label :employee_id, class: 'control-label' %><br>
+      <%= f.label :employee_id, class: 'control-label' %>
       <div class="controls">
         <%= collection_select( :invoice, :employee_id, Employee.all, :id, :name, {}, { :multiple => false } ) %>
       </div>
     </div>
-  <div class="control-group">
-      <%= f.label "Status", class: 'control-label' %><br>
+    <div class="control-group">
+      <%= f.label "Status", class: 'control-label' %>
       <div class="controls">
-        <%= f.select(:status_type, options_for_select([['PAID', 'PAID'], ['PENDING', 'PENDING']]), { include_blank: true}) %>
+        <%= f.select(:status_type, options_for_select([['PAID', 'PAID'], ['PENDING', 'PENDING']]), { include_blank: true }) %>
       </div>
     </div>
     <div class="control-group">
